# mlx-multimodal-toolkit

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
examples/: audio_processing.py  image_analysis.py  multimodal_pipeline.py  text_generation.py
src/: __init__.py  alm_driver.py  base_driver.py  config.py  llm_driver.py  models.py  unified_driver.py  vlm_driver.py
